# workrepo-journal-review-simulator

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  claude.md  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: editor-in-chief.md  format-compliance-checker.md  integrity-ai-use-auditor.md  literature-scout.md  reviewer-cloud-hpc-scheduling.md  reviewer-dataset-benchmark.md  reviewer-document-ai-htr.md  reviewer-domain.md  venue-fit-analyst.md  (+9 more)
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  core.py  main.py
apps/api/app/routers/: catalog.py  export.py  pipeline.py  responses.py  reviews.py  venue_discovery.py  venues.py
config/: external_engines.yaml  model_config.yaml  pipeline.yaml  reviewer_profiles.yaml  scoring_rubrics.yaml  upload_policy.yaml  venue_discovery.yaml
db/: schema.sql
scripts/: _bootstrap.py  build_literature_matrix.py  build_report.py  check_structure.py  compare_models.py  dev_native.ps1  discover_venues.py  dump_schema.py  export_review_package.py  import_venue_discovery.py  init_review.py  parse_paper.py  run_pipeline.py  run_query.py  scan_venue_markdowns.py
tests/: conftest.py  test_api.py  test_engines.py  test_pipeline.py  test_venue_discovery.py  test_worker_core.py
worker/: __init__.py  agent_orchestrator.py  classify.py  db.py  exporters.py  external_prompt_manager.py  external_responses.py  extraction.py  file_ingestion.py  markdown_store.py  paths.py  pipeline_runner.py  review_id.py  reviews.py  run_query.py  summary.py  venue_discovery.py  venues.py
(+422 files in other folders)
